--- a/web/advert/view/http/cell/login.htm
+++ b/web/advert/view/http/cell/login.htm
@@ -1,5 +1,7 @@
-<h5 class="m-2 p-2">{{@T.login}}:</h5>
-<form class="" action="" method="post">
-  <input class="f-input" style="margin-left: 20px;" type="text" name="pass" placeholder="...">
-  <button class="primary" type="submit">{{@T.login}}</button>
-</form>
+<div align="center">
+  <h5 class="m-2 p-2">Authentication is Required:</h5>
+  <form class="" action="" method="post" >
+    <input class="f-input" type="password" name="pass" placeholder="Password"> <br>
+    <button class="primary" style="margin-top: 10px;" type="submit">{{@T.login}}</button>
+  </form>
+</div>
